// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Sidebar/SidebarHeader default 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive canvasLayout__sidebarHeader"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h3
        className="euiTitle euiTitle--xsmall"
      >
        Selected layer
      </h3>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Save as new element"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiPopover euiPopover--anchorDownCenter canvasContextMenu"
            container={null}
            id="sidebar-context-menu-popover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <button
                  aria-describedby="generated-id"
                  aria-label="Element options"
                  className="euiButtonIcon euiButtonIcon--text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height={16}
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Sidebar/SidebarHeader without layer controls 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive canvasLayout__sidebarHeader"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h3
        className="euiTitle euiTitle--xsmall"
      >
        Grouped element
      </h3>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Save as new element"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiPopover euiPopover--anchorDownCenter canvasContextMenu"
            container={null}
            id="sidebar-context-menu-popover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <button
                  aria-describedby="generated-id"
                  aria-label="Element options"
                  className="euiButtonIcon euiButtonIcon--text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height={16}
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
